test/files/neg/noMember2.scala
object Test {
  val m = scala.collection.mutable.MultiMap(1, 2, 3)
}
